--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
     "typeorm": "^0.3.12",
+    "typeorm-extension": "^2.5.2",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
